Fix button text align to center

--- a/src/components/ButtonDelete/ButtonDelete.scss
+++ b/src/components/ButtonDelete/ButtonDelete.scss
@@ -11,6 +11,7 @@
     @include p3-style;
     font-weight: $font-weight-semibold;
     border-radius: 20px;
+    text-align: center;
 
     @include tablet {
       width: unset;
