--- a/src/components/ButtonSecondary/ButtonSecondary.scss
+++ b/src/components/ButtonSecondary/ButtonSecondary.scss
@@ -12,6 +12,7 @@
     color: $slate;
     border-radius: 20px;
     border: 0.5px solid $cloud;
+    text-align: center;
 
     @include tablet {
       width: unset;
